test/sematest/invalid/main_accessing_args_disallowed.java


class Foo {
  public static void main(String[] args) {
    int k = args[0]; /* accessing args is not allowed */
  }
}
